Bugs fixed like mobile screen horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+#root {
+  overflow-x: hidden;
+}
 
 
 @layer base {
